[package]
name = "misc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
blake3 = "1.3.3"
nlib = {path="../nlib"}
rand = "0.8.5"
xxhash-rust = {version="0.8.6",features=["xxh3","xxh32"]}
z85 = "3.0.5"
base-x = "0.2.11"
ordered-varint = "2.0.0"
psl = "2.1.3"
base64-simd = "0.8.0"
anyhow = "1.0.70"
vbyte = "0.1.0"

[dependencies.neon]
path="../lib/neon/crates/neon"
default-features=false
features=["napi-latest","proc-macros","napi-runtime","napi-runtime","futures"]

[features]
main = []
