[package]
name = "nlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.1"
paste = "1.0.12"
anyhow = "1.0.70"
num-traits = "0.2.15"

[dependencies.tokio]
version = "1.26.0"
features = ["rt","rt-multi-thread"]

[dependencies.neon]
path="../lib/neon/crates/neon"
default-features=false
features=["napi-latest","proc-macros","napi-runtime","napi-runtime","futures"]
